--- a/myspasite/ui.frontend/pom.xml
+++ b/myspasite/ui.frontend/pom.xml
@@ -59,6 +59,15 @@
                         </configuration>
                     </execution>
                     <execution>
+                        <id>npm rebuild node-sass</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>rebuild node-sass</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>npm run build</id>
                         <phase>generate-resources</phase>
                         <goals>
